<resources>
    <string name="app_name">Jobs Around</string>
    <string name="google_maps_api_key">AIzaSyAqOo9VgEIEatqJrsDs-pcUI9dbhB-vWeM</string>
    <string name="job_seeker_promise">أتعهد انا الباحث عن عمل بدفع الرسوم المستحقه وتحويل المبلغ على الحساب البنكى الخاص بؤسسه قنوات الرقميه خلال 5 ايام عمل من تاريخ مباشره الوظيفه.</string>
    <string name="rules_conditions">We present here the results of a study focused on text reading in a car. The purpose of this work is to explore how machine synthesized reading is perceived by users. Are the users willing to tolerate deficiencies of machine synthesized speech and trade it off for more current content? What is the impact of listening to it on driver’s distraction? How do the answers to the questions above differ for various types of text content? Those are the questions we try to answer in the presented study. We conducted the study with 12 participants, each facing three types of tasks. The tasks differed in the length and structure of the presented text. Reading out a fable represented an unstructured pleasure reading text. The news represented more structured short texts. Browsing a car manual was an example of working with structured text where the user looks for particular information without much focusing on surrounding content. The results indicate relatively good user acceptance for the presented tasks. Distraction of the driver was related to the amount of interaction with the system.
        Users opted for controlling the system by buttons on the steering wheel and made little use of the system’s display.

    We present here the results of a study focused on text reading in a car. The purpose of this work is to explore how machine synthesized reading is perceived by users. Are the users willing to tolerate deficiencies of machine synthesized speech and trade it off for more current content? What is the impact of listening to it on driver’s distraction? How do the answers to the questions above differ for various types of text content? Those are the questions we try to answer in the presented study. We conducted the study with 12 participants, each facing three types of tasks. The tasks differed in the length and structure of the presented text. Reading out a fable represented an unstructured pleasure reading text. The news represented more structured short texts. Browsing a car manual was an example of working with structured text where the user looks for particular information without much focusing on surrounding content. The results indicate relatively good user acceptance for the presented tasks. Distraction of the driver was related to the amount of interactioWe present here the results of a study focused on text reading in a car. The purpose of this work is to explore how machine synthesized reading is perceived by users. Are the users willing to tolerate deficiencies of machine synthesized speech and trade it off for more current content? What is the impact of listening to it on driver’s distraction? How do the answers to the questions above differ for various types of text content? Those are the questions we try to answer in the presented study. We conducted the study with 12 participants, each facing three types of tasks. The tasks differed in the length and structure of the presented text. Reading out a fable represented an unstructured pleasure reading text. The news represented more structured short texts. Browsing a car manual was an example of working with structured text where the user looks for particular information without much focusing on surrounding content. The results indicate relatively good user acceptance for the presented tasks. Distraction of the driver was related to the amount of interaction with the system. Users opted for controlling the system by buttons on the steering wheel and made little use of the system’s display.n with the system. Users opted for controlling the system by buttons on the steering wheel and made little use of the system’s display.</string>


    <!-- Bottom nav-->
    <string name="menu">القائمه</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="chat">المحادثات</string>
    <string name="rejoins">المناطق</string>
    <string name="my_location">موقعى</string>
    <string name="my_profile">حسابى</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_register">تسجيل جديد</string>
    <string name="agree">موافق</string>
    <string name="rules_condition">الشروط والاحكام</string>
    <string name="fees">الرسوم</string>
    <string name="fees_hint">الرسوم مجانيه حاليا</string>
    <string name="bank_accounts">الحسابات البنكيه</string>
    <string name="account_number">رقم الحساب:</string>
    <string name="account_name">اسم الحساب:</string>
    <string name="pen_number">رقم الايبان:</string>
    <string name="bank">البنك:</string>
    <string name="foundation_info">بيانات المنشأة</string>
    <string name="hide_foundation_name">حجب اسم المنشاة</string>
    <string name="hide_foundation_logo">حجب شعار المنشاة</string>
    <string name="foundation_activity">نشاط المنشأه</string>
    <string name="select_foundation_location">تحديدموقع المنشأه على الخريطه</string>
    <string name="location_hint">يمكن تحريك الموشرالى موقع قريب فى نفس الحى كحديقه عامه او طريق رئيسئ</string>
    <string name="commerical_number">رقم السجل التجارى</string>
    <string name="commercial_register_file">ارفاق صوره السجل التجارى</string>
    <string name="person_name">اسم الشخص المخول</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="mobile_number">رقم الجوال</string>
    <string name="email">البريد الالكترونى</string>
    <string name="family_name">اسم العائله</string>
    <string name="meddil_name">الاسم الثانى</string>
    <string name="first_name">الاسم الاول</string>
    <string name="birthday_format">العام/الشهر/اليوم</string>
    <string name="birthday">تاريخ الميلاد</string>
    <string name="hegira">هجريا</string>
    <string name="ad">ميلاديا</string>
    <string name="gender">الجنس</string>
    <string name="seeker_info">بيانات الباحث عن عمل</string>
    <string name="add_job">Add Job</string>
    <string name="search">بحث</string>
    <string name="desc_hint">وصف مختصر عن الخبرات السابقه ان وجدت</string>
    <string name="job_desc_label">وصف مختصر عن الوظيفه</string>
</resources>
