<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fees.FeesFragment">


    <include layout="@layout/tool_bar" android:id="@+id/tool_bar"/>

    <TextView
        android:id="@+id/rules_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        android:text="@string/fees"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/_10sdp"/>

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rules_label"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/fees_hint_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:text="@string/fees_hint"



        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/_10sdp"/>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/fees_hint_label"/>

    <TextView
        android:id="@+id/bank_account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/bank_accounts"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_account_label"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/account_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/blue"
        android:text="@string/account_number"/>

    <TextView
        android:id="@+id/account_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintEnd_toStartOf="@+id/account_number_label"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:text="02236565462164546545"/>


    <TextView
        android:id="@+id/account_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/blue"
        android:text="@string/account_name"/>

    <TextView
        android:id="@+id/account_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_number_label"
        app:layout_constraintEnd_toStartOf="@+id/account_name_label"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"

        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:text="مؤسسه قنوات الرقميه"/>



    <TextView
        android:id="@+id/iban_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/blue"
        android:text="@string/pen_number"/>

    <TextView
        android:id="@+id/iban_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_name_label"
        app:layout_constraintEnd_toStartOf="@+id/iban_number_label"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:text="As 54654654654656565465"/>


    <TextView
        android:id="@+id/bank_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iban_number_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/blue"
        android:text="@string/bank"/>

    <TextView
        android:id="@+id/bank_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iban_number_tv"
        app:layout_constraintEnd_toStartOf="@+id/bank_name_label"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:text="مصرف الرجحى"/>
    <TextView
        android:background="@drawable/rect_white_with_blue_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/job_seeker_promise"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/bank_name_tv"/>


    <CheckBox
        android:id="@+id/promise_check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        android:layout_width="wrap_content"
        android:shadowColor="@color/blue"
        android:text="أتعهد بدفع الرسوم"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layoutDirection="rtl"
        android:buttonTint="@color/colorPrimary"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:text="التالى"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp" />


</androidx.constraintlayout.widget.ConstraintLayout>